# Yoink-Areospace

./: .gitignore  README.md  environment.yml  linux_setup_guide.md  platformio.ini  USERPROFILE.wslconfig
Week 3/: Week_3_Handout.ino  Week_3_IMU.code.ino
ros2_ws/src/rover_bringup/: setup.cfg  setup.py
ros2_ws/src/rover_bringup/rover_bringup/: lidar_bridge_node.py
rover_bringup/: package.xml  setup.py
rover_bringup/launch/: rover.launch.py
rover_bringup/rover_bringup/: TESTinfrence.py  serial_bridge_node.py
src/ArduinoTest/: Week_3_Encoder.cpp  week_3_IMU.cpp
src/Week 4/: Week_4_PI_controller.cpp
src/Week_4/: Week_4_PI_controller.cpp  Week_4_drive.cpp
src/model/: eval.py  infrence.py  isaac_env.py  lynx.urdf  train.py  visualize.py  yoink.py
src/model/assets/: lynx.urdf  target.usd
src/model/checkpoints/: checkpoint_10000.pt
src/week_2/: PWMmotortest.ino  week1motortest.ino
